2010-02-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #13205: RTE 1.8.6 not focusing correctly with IE8

2010-02-19  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12870: Login News missing styling for links (Thanks to Steffen Gebert)

2010-02-14  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to #13448: Do not unset $typo3CacheFactory singleton

2010-02-14  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL version from 1.0.3 to 1.0.4
	* Fixed bug #12829: ALTER TABLE is not able to parse length restriction in index creation

2010-02-14  Andreas Otto  <andreas@otto-hanika.de>

	* Fixed bug #13380: Recursive deletion of alternative page languages

2010-02-13  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13529: DISTINCT should not be used as a function

2010-02-09  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13490: Where clause 0=0 cannot be parsed

2010-02-08  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13464: ORA-00920: invalid relational operator in module statistics [indexed_search]
	* Fixed bug #13463: Modfunc2 (statistics) is not compatible with DBAL [indexed_search]

2010-02-08  Steffen Kamper  <info@sk-typo3.de>

	* Reverted Follow-up to #13448: Unset another variable

2010-02-08  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13456: Typo in rsaauth ext_tables.sql
	* Fixed bug #13257: PHP warning stristr() in Configuration -> Search under PHP 5.3 (thanks to Steffen Gebert)

2010-02-07  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to #13448: Unset another variable
	* Fixed bug #13365: Table headers in t3lib_fullsearch (thanks to Georg Ringer)
	* Fixed bug #13448: Typo in BE cache init section
	* Fixed bug #13193: Day of week in scheduler cron command is not calculated correctly

2010-02-06  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13430: Cannot parse INSERT when VALUES has no space before left parenthesis

2010-02-05  Steffen Kamper  <info@sk-typo3.de>
