@@ -1,6 +1,7 @@
 2010-02-19  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #13205: RTE 1.8.6 not focusing correctly with IE8
+	* Fixed bug #13478: htmlArea RTE: Inline styles not available if text marked with keyboard
 
 2009-12-11  Stanislas Rolland  <typo3@sjbr.ca>
 
